<resources>
    <string name="app_name">WanAndroid</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="loading">Loading..</string>
    <string name="hint">提示</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="login">登录</string>
    <string name="register">注册</string>


    <string name="err_http_msg">HTTP连接异常</string>
    <string name="err_socket_msg">SOCKET连接超时</string>
    <string name="err_unknown_msg">无法连接到主机</string>
    <string name="err_network_msg">网络错误异常</string>
    <string name="err_json_msg">数据解析异常</string>
    <string name="err_general_msg">发生错误</string>
    <string name="main_home">首页</string>
    <string name="main_system">体系</string>
    <string name="main_open_number">公众号</string>
    <string name="main_plaza">广场</string>
    <string name="main_project">项目</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_search_context">请输入搜索内容</string>
    <!--侧滑-->
    <string name="drawer_integral">积分</string>
    <string name="drawer_collect">收藏</string>
    <string name="drawer_todo">TODO</string>
    <string name="drawer_system_setting">系统设置</string>
    <string name="drawer_night">夜间模式</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_my">关于我们</string>
    <string name="drawer_exit">退出登录</string>
    <string name="backslash"> / </string>
    <string name="add">add</string>
    <string name="no_loading">没有更多数据</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="show_item_header">头部显示</string>
    <string name="hot_search">热门搜索</string>
    <string name="search">搜索</string>
    <string name="discover_knowledge">发现更多干货</string>
    <string name="search_clear">清空</string>
    <string name="collect_succeed">收藏成功</string>
    <string name="collect_cancel">取消收藏</string>
    <string name="share">分享</string>
    <string name="share_article">分享文章</string>
    <string name="share_title">文字标题</string>
    <string name="share_article_title_tip">100字以内</string>
    <string name="article_url">文章链接</string>
    <string name="url_hint">例如:WWW.wanandroid.com</string>
    <string name="share_hint" translatable="false">1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;\n2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;
        \n3. 其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;\n4. 目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好。
        \n5. 由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系...</string>
    <string name="please_examine_hint">请检查输入的文本</string>
    <string name="share_succeed">分享成功</string>
    <string name="integral_detail">积分明细</string>
    <string name="symbol_add">+</string>
    <string name="menu_query">疑问</string>
    <string name="integral_no_text">----</string>
    <string name="clear_success">清除成功</string>
</resources>