<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/main_home" />
    <item
        android:id="@+id/navigation_plaza"
        android:icon="@drawable/ic_plaza"
        android:title="@string/main_plaza" />
    <item
        android:id="@+id/navigation_open_number"
        android:icon="@drawable/ic_library_books"
        android:title="@string/main_open_number" />
    <item
        android:id="@+id/navigation_nv"
        android:icon="@drawable/ic_system"
        android:title="@string/main_system" />
    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/ic_article"
        android:title="@string/main_project" />
</menu>