<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/viewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_12dp"
            android:text="@string/share_title"
            android:textSize="@dimen/view_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvArticleTitle"
            android:layout_width="@dimen/view_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_8dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/share_article_title_tip"
            android:minHeight="@dimen/view_60dp"
            android:padding="@dimen/view_8dp"
            android:textSize="@dimen/view_14sp"
            app:layout_constraintEnd_toEndOf="@id/viewTitle"
            app:layout_constraintStart_toStartOf="@id/viewTitle"
            app:layout_constraintTop_toBottomOf="@id/viewTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/viewUrlTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_12dp"
            android:text="@string/article_url"
            android:textSize="@dimen/view_16sp"
            app:layout_constraintTop_toBottomOf="@id/tvArticleTitle" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvArticleUrl"
            android:layout_width="@dimen/view_0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/url_hint"
            android:minHeight="@dimen/view_60dp"
            android:padding="@dimen/view_8dp"
            android:textSize="@dimen/view_14sp"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="@id/tvArticleTitle"
            app:layout_constraintStart_toStartOf="@id/tvArticleTitle"
            app:layout_constraintTop_toBottomOf="@id/viewUrlTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/share_hint"
            android:layout_width="@dimen/view_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/view_12sp"
            android:padding="@dimen/view_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/viewTitle"
            app:layout_constraintStart_toStartOf="@id/viewTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>