<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.zhao.wanandroid.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/view_100dp"
            android:layout_height="@dimen/view_100dp"
            android:src="@drawable/ic_android_black_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_50dp"
            android:layout_marginStart="@dimen/view_16dp"
            android:layout_marginEnd="@dimen/view_16dp"
            android:hint="@string/hint_username"
            app:boxBackgroundColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUsername"
                android:textSize="@dimen/view_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/layoutTextName"
            app:layout_constraintStart_toStartOf="@id/layoutTextName"
            app:layout_constraintTop_toBottomOf="@id/layoutTextName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:textSize="@dimen/view_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btRegister"
            android:text="@string/register"
            android:textSize="@dimen/view_16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutTextPassword"
            app:layout_constraintEnd_toEndOf="@id/layoutTextPassword"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/login"
            android:textSize="@dimen/view_18sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/view_24dp"
            android:layout_marginStart="@dimen/view_24dp"
            android:layout_marginEnd="@dimen/view_24dp"
            app:layout_constraintStart_toStartOf="@id/layoutTextPassword"
            app:layout_constraintEnd_toEndOf="@id/layoutTextPassword"
            app:layout_constraintTop_toBottomOf="@id/btRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>